--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 title = "Andra's Blog"
 theme = "even"
 
-base_url = "https://andraaa.space"
+base_url = "https://andraaa.my.id"
 
 compile_sass = true
 
