--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-icons/all-files": "^4.1.0",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/network-connector": "^6.1.9",
+    "@web3-react/types": "^6.0.7",
     "autoprefixer": "^10.4.0",
     "disqus-react": "^1.1.2",
     "eslint": "7.29.0",
