--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "@headlessui/react": "1.7.19",
+    "@headlessui/react": "1.7.18",
     "@react-icons/all-files": "^4.1.0",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "autoprefixer": "^10.4.0",
-    "disqus-react": "^1.1.2",
+    "disqus-react": "1.1.5",
     "eslint": "7.29.0",
     "eslint-config-next": "^14.1.3",
     "gray-matter": "^4.0.3",
