--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "styled-components": "^6.1.8",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@netlify/plugin-nextjs": "^4.41.3"
   }
 }
