--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "andraantariksa",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "devDependencies": {
-    "@headlessui/react": "1.7.18",
-    "@react-icons/all-files": "^4.1.0",
-    "@types/node": "^16.11.10",
-    "@types/react": "^17.0.37",
-    "@types/styled-components": "^5.1.34",
-    "autoprefixer": "^10.4.0",
-    "disqus-react": "1.1.5",
-    "eslint": "7.29.0",
-    "eslint-config-next": "^14.1.3",
-    "gray-matter": "^4.0.3",
-    "marked": "12.0.1",
-    "next": "^14.1.3",
-    "postcss": "8.4.36",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8",
-    "tailwindcss": "^2.2.19",
-    "typescript": "^4.5.2",
-    "@netlify/plugin-nextjs": "^4.41.3"
-  }
+    "name": "andraantariksa",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "prepare": "svelte-kit sync || echo ''",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^6.0.0",
+        "@sveltejs/adapter-static": "^3.0.8",
+        "@sveltejs/kit": "^2.16.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "@types/node": "^22.15.24",
+        "autoprefixer": "^10.4.21",
+        "gray-matter": "^4.0.3",
+        "marked": "^15.0.12",
+        "postcss": "^8.5.4",
+        "prettier": "^3.5.3",
+        "prettier-plugin-svelte": "^3.4.0",
+        "svelte": "^5.0.0",
+        "svelte-check": "^4.0.0",
+        "typescript": "^5.0.0",
+        "vite": "^6.2.6"
+    },
+    "dependencies": {
+        "normalize.css": "^8.0.1"
+    }
 }
