--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vite": "^6.2.6"
     },
     "dependencies": {
+        "@sveltejs/adapter-cloudflare": "^7.0.3",
         "normalize.css": "^8.0.1"
     }
 }
