--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "type": "module",
     "scripts": {
         "dev": "vite dev",
-        "build": "vite build",
+        "build": "svelte-kit sync && vite build",
         "preview": "vite preview",
         "prepare": "svelte-kit sync || echo ''",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    },
+    "engines": {
+        "node": ">=20.0.0"
     },
     "devDependencies": {
         "@sveltejs/adapter-auto": "^6.0.0",
@@ -29,7 +32,7 @@
         "vite": "^6.2.6"
     },
     "dependencies": {
-        "@sveltejs/adapter-cloudflare": "^7.0.3",
+        "@sveltejs/adapter-cloudflare": "^7.1.1",
         "normalize.css": "^8.0.1"
     }
 }
